# ExplainableGNN

./: .gitignore  README.md  pyproject.toml
src/: benchmark_metrics.py  benchmark_oversquashing.py  benchmark_runtime.py  corasen.py  explain_graph.py  explain_node.py  plot_results_manual.py  structure_performance_curve.py
