[project]
name = "explainablegnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "mlflow>=3.3.2",
    "ogb>=1.3.6",
    "pandas>=2.3.2",
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
]
